<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="@android:color/black"
    tools:context="com.mc.chi.moo.MainActivity">

    <TextView
        android:text="@string/sAcc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/sen0"
        android:textSize="11dp"
        android:textColor="@android:color/holo_red_dark"/>

    <TextView
        android:text="@string/sLinAcc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/sen0"
        android:id="@+id/sen1"
        android:textSize="11dp"
        android:textColor="@android:color/holo_orange_dark"/>
    <TextView
        android:text="@string/sGravity"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/sen1"
        android:id="@+id/sen2"
        android:textSize="11dp"
        android:textColor="@android:color/holo_orange_light"/>
    <TextView
        android:text="@string/sGyro"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/sen2"
        android:id="@+id/sen3"
        android:textSize="11dp"
        android:textColor="@android:color/holo_green_dark"/>
    <TextView
        android:text="@string/sLight"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/sen3"
        android:id="@+id/sen4"
        android:textSize="11dp"
        android:textColor="@android:color/holo_green_light"/>
    <TextView
        android:text="@string/sMagneticField"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/sen4"
        android:id="@+id/sen5"
        android:textSize="11dp"
        android:textColor="@android:color/holo_blue_dark"/>
    <TextView
        android:text="@string/sProximity"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/sen5"
        android:id="@+id/sen6"
        android:textSize="11dp"
        android:textColor="@android:color/holo_blue_light"/>
    <TextView
        android:text="@string/sPressure"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/sen6"
        android:id="@+id/sen7"
        android:textSize="11dp"
        android:textColor="@android:color/holo_purple"/>
    <TextView
        android:text="@string/sTemperature"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/sen7"
        android:id="@+id/sen8"
        android:textSize="11dp"
        android:textColor="@color/colorAccent"/>
</RelativeLayout>
